--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@next/font": "^14.2.15",
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
-    "next": "^15.4.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
@@ -25,7 +25,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.1",
+    "eslint-config-next": "^16.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
